# Course_project_5

./: README.md  main.py  pyproject.toml  queries.sql
src/: companies_list.py  db_manager.py  hh_api.py
utils/: config.py  users_interaction.py
